packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/wld-003-not-a-world.ttrp
// expect: TTRP-WLD-003
uses world "acme.worlds.dev.erp_pg"
container c target polars { }
